# GPc

./: CGp.cpp  CGp.h  CKern.cpp  CKern.h  CKernTypes.hpp  CMakeLists.txt  CMatrix.cpp  CMatrix.h  CNoise.h  CRbfardKern.cpp  CRbfardKern.hpp  make.linux  makefile  package.xml
gpml_mat/: GP.mat  GP_result.mat  GP_result_vect.mat
include/GPc/: CClctrl.h  CDist.h  CGp.h  CMatrix.h  CMltools.h  CNdlInterfaces.h  CRbfKern.hpp  CTransform.h  GMPLMultiDimGp.h
include/GPc/noise/: CGaussianMultiDimNoise.h  CGaussianNoise.h  CNoise.h  CNoiseTypes.h
src/: gp.h
src/GPc/: CDist.cpp  CGp.cpp  CMatrix.cpp  CMltools.cpp  CRbfKern.cpp
src/GPc/noise/: CGaussianMultiDimNoise.cpp  CGaussianNoise.cpp  CNoise.cpp
test/: testDist.cpp  testGPML.cpp  testGp.cpp  testIvm.cpp  testKern.cpp  testMatrix.cpp  testMltools.cpp  testNdlutil.cpp  testNoise.cpp
